15 ТЗ. Подсмотрела решение...